# Trackshift

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
artifacts/models/: model-latest.json
docs/: ARCHITECTURE.md  DEMO.md  PRODUCTION.md  ROADMAP.md  SCHEMAS.md
edge-agent/: Cargo.toml  README.md
edge-agent/artifacts/01KA49MN9DHPKD0P9P6MBRW8XZ/: manifest.json
edge-agent/artifacts/01KA589VA7M263AJZPYG9M461D/: manifest.json
edge-agent/src/: proto.rs
gateway/: README.md  go.mod  go.sum  run_gateway.txt
gateway/cmd/gateway/: main.go
gateway/internal/connectors/: azure.go  connector.go  ftps.go  s3.go  sftp.go
gateway/internal/dlp/: scanner.go
infra/: README.md
infra/docker-compose/: docker-compose.dev.yml  prometheus.yml
infra/k8s/base/: gateway-deployment.yaml  gateway-service.yaml  kustomization.yaml  ml-coordinator-deployment.yaml  namespace.yaml  orchestrator-deployment.yaml  orchestrator-service.yaml  ui-admin-deployment.yaml  ui-admin-service.yaml
infra/terraform/aws-eks/: main.tf  variables.tf
ml-coordinator/: README.md  pyproject.toml
ml-coordinator/app/: main.py
ml-coordinator/data/: training.jsonl
orchestrator/: README.md  go.mod  go.sum
proto/: README.md  buf.gen.yaml  buf.yaml
proto/trackshift/common/: common.proto
tools/demo-scripts/: README.md  pilot.py
ui-admin/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
ui-admin/docker/: nginx.conf
ui-admin/src/: App.css  App.js  App.tsx  index.css  main.tsx
(+35 files in other folders)
